kodex-rs/tui/src/history_cell/snapshots/kodex_tui__history_cell__tests__session_header_indicates_yolo_mode.snap
---
source: tui/src/history_cell/tests.rs
assertion_line: 1885
expression: rendered
---

  >_ OpenAI Kodex (vtest)
     /tmp/project
  permissions: YOLO mode
