kodex-rs/tui/src/history_cell/snapshots/kodex_tui__history_cell__tests__session_info_availability_nux_tooltip_snapshot.snap
---
source: tui/src/history_cell/tests.rs
assertion_line: 776
expression: rendered
---

  >_ OpenAI Kodex (v0.160.1)
     /tmp/project

  Tip: Model just became available
